"""
Concrete ML model implementations for the MCP Prediction Server.

This module provides framework-specific implementations of the MLModel interface,
supporting PyTorch and scikit-learn models.
"""

import logging
from typing import Any
from pathlib import Path

from ..domain import MLModel, ModelPredictionError, ModelNotLoadedError


class TorchModel(MLModel):
    """
    PyTorch model implementation.
    
    This adapter wraps PyTorch models to provide a consistent interface
    for the prediction service. It handles model loading, inference,
    and error handling specific to PyTorch.
    
    Assumptions:
    - Model files are saved using torch.save()
    - Model expects tensor inputs
    - Model implements .eval() method for inference mode
    """
    
    def __init__(
        self, 
        model_path: str, 
        version: str,
        device: str = "cpu",
        logger: logging.Logger = None
    ) -> None:
        """
        Initialize the PyTorch model.
        
        Args:
            model_path: Path to the saved PyTorch model file.
            version: Version identifier for the model.
            device: Device to run inference on ('cpu' or 'cuda').
            logger: Optional logger for operation tracking.
        """
        self._model_path = Path(model_path)
        self._version = version
        self._device = device
        self._logger = logger or logging.getLogger(__name__)
        self._loaded_model = None
        
        # TODO: Add model validation and loading at initialization
        # For now, we defer loading until first prediction
    
    def predict(self, input_data: Any) -> Any:
        """
        Execute prediction using the PyTorch model.
        
        Args:
            input_data: Preprocessed tensor data for model input.
            
        Returns:
            Raw prediction tensor from the model.
            
        Raises:
            ModelPredictionError: If prediction fails.
            ModelNotLoadedError: If model is not loaded.
        """
        try:
            # Lazy load the model on first prediction
            if self._loaded_model is None:
                self._load_model()
            
            # TODO: Implement actual PyTorch inference
            # This is a stub implementation
            self._logger.info("Executing PyTorch model prediction")
            
            # Placeholder implementation - replace with actual torch inference
            # Example: 
            # with torch.no_grad():
            #     self._loaded_model.eval()
            #     output = self._loaded_model(input_data)
            #     return output.cpu().numpy()
            
            raise NotImplementedError(
                "PyTorch model prediction not yet implemented. "
                "TODO: Add torch.load(), model.eval(), and inference logic."
            )
            
        except NotImplementedError:
            raise
        except Exception as e:
            self._logger.error(f"PyTorch prediction failed: {e}")
            raise ModelPredictionError(
                "PyTorch model prediction failed",
                details=str(e)
            ) from e
    
    def version(self) -> str:
        """Get the model version identifier."""
        return self._version
    
    def _load_model(self) -> None:
        """
        Load the PyTorch model from disk.
        
        Raises:
            ModelNotLoadedError: If model loading fails.
        """
        try:
            if not self._model_path.exists():
                raise FileNotFoundError(f"Model file not found: {self._model_path}")
            
            # TODO: Implement actual model loading
            # import torch
            # self._loaded_model = torch.load(self._model_path, map_location=self._device)
            # self._loaded_model.eval()
            
            self._logger.info(f"PyTorch model loaded from {self._model_path}")
            
            # Placeholder - remove when implementing actual loading
            raise NotImplementedError(
                "PyTorch model loading not yet implemented. "
                "TODO: Add torch.load() implementation."
            )
            
        except Exception as e:
            self._logger.error(f"Failed to load PyTorch model: {e}")
            raise ModelNotLoadedError(
                "Failed to load PyTorch model",
                details=str(e)
            ) from e


class SklearnModel(MLModel):
    """
    Scikit-learn model implementation.
    
    This adapter wraps scikit-learn models to provide a consistent interface
    for the prediction service. It handles model loading, inference,
    and error handling specific to scikit-learn.
    
    Assumptions:
    - Model files are saved using joblib or pickle
    - Model implements .predict() method
    - Input data is numpy arrays or pandas DataFrames
    """
    
    def __init__(
        self, 
        model_path: str, 
        version: str,
        logger: logging.Logger = None
    ) -> None:
        """
        Initialize the scikit-learn model.
        
        Args:
            model_path: Path to the saved scikit-learn model file.
            version: Version identifier for the model.
            logger: Optional logger for operation tracking.
        """
        self._model_path = Path(model_path)
        self._version = version
        self._logger = logger or logging.getLogger(__name__)
        self._loaded_model = None
    
    def predict(self, input_data: Any) -> Any:
        """
        Execute prediction using the scikit-learn model.
        
        Args:
            input_data: Preprocessed numpy array or DataFrame for model input.
            
        Returns:
            Raw prediction array from the model.
            
        Raises:
            ModelPredictionError: If prediction fails.
            ModelNotLoadedError: If model is not loaded.
        """
        try:
            # Lazy load the model on first prediction
            if self._loaded_model is None:
                self._load_model()
            
            # TODO: Implement actual scikit-learn inference
            self._logger.info("Executing scikit-learn model prediction")
            
            # Placeholder implementation - replace with actual sklearn inference
            # Example:
            # return self._loaded_model.predict(input_data)
            
            raise NotImplementedError(
                "Scikit-learn model prediction not yet implemented. "
                "TODO: Add model.predict() implementation."
            )
            
        except NotImplementedError:
            raise
        except Exception as e:
            self._logger.error(f"Scikit-learn prediction failed: {e}")
            raise ModelPredictionError(
                "Scikit-learn model prediction failed",
                details=str(e)
            ) from e
    
    def version(self) -> str:
        """Get the model version identifier."""
        return self._version
    
    def _load_model(self) -> None:
        """
        Load the scikit-learn model from disk.
        
        Raises:
            ModelNotLoadedError: If model loading fails.
        """
        try:
            if not self._model_path.exists():
                raise FileNotFoundError(f"Model file not found: {self._model_path}")
            
            # TODO: Implement actual model loading
            # import joblib
            # self._loaded_model = joblib.load(self._model_path)
            
            self._logger.info(f"Scikit-learn model loaded from {self._model_path}")
            
            # Placeholder - remove when implementing actual loading
            raise NotImplementedError(
                "Scikit-learn model loading not yet implemented. "
                "TODO: Add joblib.load() or pickle.load() implementation."
            )
            
        except Exception as e:
            self._logger.error(f"Failed to load scikit-learn model: {e}")
            raise ModelNotLoadedError(
                "Failed to load scikit-learn model",
                details=str(e)
            ) from e
